--- a/trove-backend/.env
+++ b/trove-backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://trovecluster:@dityAsingh@trovecluster.xxxxx.mongodb.net/troveDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://adityasingh:adisingh786@trovecluster.gvbdbfn.mongodb.net/troveDB?retryWrites=true&w=majority&appName=TroveCluster
